--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,150 @@
-h1 {
-    color: blue;
-    font-family: verdana;
-    font-size: 300%;
+@font-face {
+    font-family: "Libre Baskerville";
+    src: url("fonts/LibreBaskerville-Regular.ttf");
 }
 
-p {
-    color: red;
-    font-family: courier;
-    font-size: 160%;
+.icons {
+    padding: 0 12px;
 }
 
-#BorderTest {
-    padding: 50px;
-    margin: 100px;
+.action-list-2 span {
+    position: relative;
+    font-size: 17px;
+    overflow: hidden;
+    vertical-align: middle;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+.action-list-2 a {
+    display: inline-block;
+    text-decoration: none;
+}
+
+#navbar {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    align-items: center;
+    height: 64px;
+    padding: 0 66px 0 66px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    width: 100%;
+    text-align: center;
+    background-color: white;
+    box-shadow: 0 0 5px grey;
+    z-index: 50;
+}
+
+.navbar div {
+    padding: 0 14px;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+#PageTitle {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 0 20px;
+    position: relative;
+    flex: 1;
+}
+
+#sitewrapper {
+    padding: 0 80px 0 80px;
+}
+
+.wholepage {
+    padding-top: 80px;
+}
+
+.header-panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 128px;
+}
+
+
+.header-panel div {
+    width: 100%;
+}
+
+.opening-hours {
+    margin-bottom: 24px;
+}
+
+.header-quote a {
+    background-color: rgb(72, 72, 127);
+    padding: 18px 54px;
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+}
+
+#hamburger {
+    padding: 15px;
+    flex-grow: 0;
+    flex-shrink: 1;
+}
+
+#Handy-title {
+    margin-bottom: 16px;
+}
+
+.upper-header {
+    margin-bottom: 80px;
+    margin-top: 80px;
+}
+
+#Handy-title>span {
+    font-family: "Libre Baskerville", serif;
+    font-size: 56px;
+    font-weight: 700;
+}
+
+@media screen and (max-width: 640px) {
+    div.action-list-2 {
+        display: none;
+    }
+
+    #navbar {
+        justify-content: left;
+        padding: 0 12px 0 12px;
+        text-align: left;
+    }
+
+    #sitewrapper {
+        padding: 0 0 56px 0;
+    }
+
+    #header-image {
+        display: block;
+    }
+}
+
+#header-image {
+    order: 2;
+}
+
+#header-image * {
+    max-width: 100%;
+}
+
+* {
+    margin: 0;
+    line-height: 1.5em;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    color: rgb(72, 72, 127);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-tap-highlight-color: transparent;
+    text-size-adjust: 100%;
 }
