--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,12 @@
     flex: 1;
 }
 
+#PageTitle a {
+    text-decoration: none;
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+}
+
 #sitewrapper {
     padding: 0 80px 0 80px;
 }
@@ -118,6 +124,8 @@
         justify-content: left;
         padding: 0 12px 0 12px;
         text-align: left;
+        transform: translateZ(0);
+        -webkit-transform: translateZ(0);
     }
 
     #sitewrapper {
