--- a/styles.css
+++ b/styles.css
@@ -21,26 +21,43 @@
     text-decoration: none;
 }
 
-#navbar {
+.nav-wrapper {
+    height: 64px;
+}
+
+.nav-wrapper .nav {
+    height: 64px;
+    width: 100%;
+    position: relative;
+}
+
+.nav-wrapper .nav.fixed {
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+#nav {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     white-space: nowrap;
     align-items: center;
-    height: 64px;
     padding: 0 66px 0 66px;
-    position: fixed;
     top: 0;
     left: 0;
+    position: fixed;
     box-sizing: border-box;
-    width: 100%;
+    width: inherit;
     text-align: center;
     background-color: white;
     box-shadow: 0 0 5px grey;
-    z-index: 50;
+    height: inherit;
 }
 
-.navbar div {
+.nav div {
     padding: 0 14px;
     flex-grow: 1;
     flex-shrink: 0;
@@ -54,12 +71,18 @@
     flex: 1;
 }
 
+#PageTitle a {
+    text-decoration: none;
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+}
+
 #sitewrapper {
     padding: 0 80px 0 80px;
 }
 
 .wholepage {
-    padding-top: 80px;
+    padding-top: 64px;
 }
 
 .header-panel {
@@ -114,7 +137,7 @@
         display: none;
     }
 
-    #navbar {
+    #nav {
         justify-content: left;
         padding: 0 12px 0 12px;
         text-align: left;
@@ -122,10 +145,6 @@
 
     #sitewrapper {
         padding: 0 0 56px 0;
-    }
-
-    #header-image {
-        display: block;
     }
 }
 
@@ -151,6 +170,13 @@ img {
 
 address {
     font-size: 20px;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 * {
